"""
gRPC服务端实现 v2.2
"""
import asyncio
from concurrent import futures
import grpc
from datetime import datetime
from uuid import uuid4

class AIPlatformServicer:
    """AI Platform gRPC服务"""
    
    def __init__(self):
        self.projects = {}
        self.experiments = {}
        self.models = {}
        self.training_tasks = {}
    
    # 通用
    async def HealthCheck(self, request, context):
        return {"healthy": True, "version": "2.2.0"}
    
    async def GetInfo(self, request, context):
        return {
            "version": "2.2.0",
            "services": {
                "feature_store": True,
                "model_registry": True,
                "lineage": True,
                "quality": True,
                "notebooks": True,
                "llm_tracing": True,
                "evaluation": True,
                "multi_tenant": True,
                "distributed": True
            }
        }
    
    # 项目
    async def ListProjects(self, request, context):
        projects = list(self.projects.values())
        return {"projects": projects, "total": len(projects)}
    
    async def GetProject(self, request, context):
        project = self.projects.get(request.project_id)
        if not project:
            context.abort(grpc.StatusCode.NOT_FOUND, "Project not found")
        return project
    
    async def CreateProject(self, request, context):
        project = {
            "project_id": str(uuid4()),
            "name": request.name,
            "description": request.description,
            "status": "active",
            "created_at": datetime.utcnow().isoformat()
        }
        self.projects[project["project_id"]] = project
        return project
    
    # 实验
    async def ListExperiments(self, request, context):
        exps = [e for e in self.experiments.values() if e.get("project_id") == request.project_id]
        return {"experiments": exps, "total": len(exps)}
    
    async def CreateExperiment(self, request, context):
        exp = {
            "experiment_id": str(uuid4()),
            "project_id": request.project_id,
            "name": request.name,
            "base_model": request.base_model,
            "status": "pending",
            "metrics": {}
        }
        self.experiments[exp["experiment_id"]] = exp
        return exp
    
    # 模型
    async def ListModels(self, request, context):
        models = list(self.models.values())
        return {"models": models, "total": len(models)}
    
    async def GetModel(self, request, context):
        model = self.models.get(request.model_id)
        if not model:
            context.abort(grpc.StatusCode.NOT_FOUND, "Model not found")
        return model
    
    # 训练
    async def StartTraining(self, request, context):
        task_id = str(uuid4())
        self.training_tasks[task_id] = {
            "task_id": task_id,
            "experiment_id": request.experiment_id,
            "status": "running",
            "metrics": {}
        }
        return {"task_id": task_id, "status": "running"}
    
    async def GetTrainingStatus(self, request, context):
        task = self.training_tasks.get(request.task_id)
        if not task:
            context.abort(grpc.StatusCode.NOT_FOUND, "Task not found")
        return {
            "task_id": task["task_id"],
            "status": task["status"],
            "metrics": task["metrics"]
        }
    
    # 推理
    async def Predict(self, request, context):
        return {
            "outputs": {"prediction": "mock_result"},
            "latency_ms": 10.5
        }

# 创建servicer实例
servicer = AIPlatformServicer()
